2003-09-22    Ping Cheng <pingc@wacom.com>
	* Support TwinView Cintiq calibration
	* Enable Screenno Option for TwinView setup
	* Minor serial tablet and kernel 2.6 support fixes

2003-08-13    Ping Cheng <pingc@wacom.com>
	* Added relative movement acceleration
	* Added Mapping, Tip Feel, and Movement Controls in wacomcpl

2003-07-31    Ping Cheng <pingc@wacom.com>
	* Added "Left Double Click" and "Ignore Button Event" 
	  commands into xsetwacom
	* Set Mode default values: cursor - relative
				   stylus/eraser - absolute

2003-07-24    Ping Cheng <pingc@wacom.com>
	* Added new xsetwacom commands (Mode, SpeedLevel, and ClickForce)

2003-07-19    Ping Cheng <pingc@wacom.com>
	* Fixed Intuos tilt filter
	* Send raw values of tilt, pressure, rotation and 4D mouse
	* wheel to valuators when the device is in relative mode

2003-07-16    Ping Cheng <pingc@wacom.com>
	* Fixed Intuos filter to ignore the first sample
	* Added noise reducing filter for all tablets
	* Cleaned up old filters
	* Improved USB relative movement

2003-07-10    John E. Joganic <john@joganic.com>
	* Fixed Intuos filter to ignore first couple samples.
	* Added pedantic to compiler options
	* Fixed minor warnings caused by pedantic setting.

2003-07-08    Ping Cheng <pingc@wacom.com>
	* Changed src/Makefile.am for kernel 2.5 (Kris Verbeeck)

2003-06-25    Ping Cheng <pingc@wacom.com>
	* Added TwinView support (Ron Woods)
	* Fixed single screen mapping problem
	* Added TabletPC calibration
	* Support 2.5 kernel in X driver (Kris Verbeeck)

2003-06-19    John E. Joganic <john@joganic.com>
	* Reapplied patch for tablets reporting as 0x47.
	* Suppress value of 0 disables suppression.

2003-06-16    John E. Joganic <john@joganic.com>
	* Added mkxincludes, automatic check for x-includes in configure

2003-06-15    John E. Joganic <john@joganic.com>
	* Released version 0.5.1-beta

2003-06-14    John E. Joganic <john@joganic.com>
	* Fixed wacomcpl/wacomxi to run on systems with tcl and tk installed